--- a/src/main.css
+++ b/src/main.css
@@ -334,7 +334,6 @@ button.match-status {
   .nav-bar-top {
     border-radius: unset;
     margin: unset;
-    overflow: hidden; /* risk here is from .selector element overflowing */
     position: sticky;
     top: 0;
     padding: 0;
@@ -342,6 +341,8 @@ button.match-status {
   }
   .nav-bar-top .selector {
     margin: auto;
+    max-width: 100%;
+    overflow: hidden;
   }
 }
 
